--- a/samconfig.yaml
+++ b/samconfig.yaml
@@ -3,7 +3,7 @@ version: 0.1
 default:
   global:
     parameters:
-      stack_name: "PGE"
+      stack_name: PGE
 
   build:
     parameters:
@@ -16,10 +16,13 @@ default:
 
   deploy:
     parameters:
-      capabilities: "CAPABILITY_IAM"
+      capabilities: CAPABILITY_IAM
       confirm_changeset: true
       resolve_s3: true
 
+      s3_prefix: PGE
+      region: us-west-2
+      image_repositories: []
   package:
     parameters:
       resolve_s3: true
@@ -30,8 +33,8 @@ default:
 
   local_start_api:
     parameters:
-      warm_containers: "EAGER"
+      warm_containers: EAGER
 
   local_start_lambda:
     parameters:
-      warm_containers: "EAGER"
+      warm_containers: EAGER
