--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: >-
-  PGE
+  Serverless Energy Processor
 Transform:
 - AWS::Serverless-2016-10-31
 
